# src/api/routers/users.go
@@ -12,4 +12,5 @@ func User(router *gin.RouterGroup, cfg *config.Config) {
 	router.POST("send-otp", middlewares.OtpLimiter(cfg), h.SendOtp)
 	router.POST("login-by-username", h.LoginByUsername)
 	router.POST("register-by-username", h.RegisterByUsername)
+	router.POST("register-login-by-mobile", h.RegisterLoginByMobileNumber)
 }
